# nonebot_plugin_eventdone

./: README.md  __init__.py  pyproject.toml
nonebot_plugin_eventdone/: LICENSE  README.md  __init__.py  config.py  pyproject.toml  set.json  setup.py
nonebot_plugin_eventdone/nonebot_plugin_eventdone.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
