[tool.poetry]
name = "nonebot_plugin_eventdone"
version = "1.1.0"
description = ""
authors = ["Padro Felice <2659737583@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-rc.3"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
