[tool.poetry]
name = "nonebot_plugin_eventdone"
version = "0.1.1"
description = ""
authors = ["Padro Felice <2659737583@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
